--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -78,17 +78,17 @@
                     <table id="services-table">
                         <thead>
                         <tr class="header">
-                            <th>Host</th>
-                            <th>Game</th>
-                            <th>Server Name</th>
-                            <th>On-Boot</th>
-                            <th>Status</th>
-                            <th>Port</th>
-                            <th>Players</th>
-                            <th>Memory</th>
-                            <th>CPU</th>
+                            <th class="host">Host</th>
+                            <th class="icon">Game</th>
+                            <th class="name">Server Name</th>
+                            <th class="enabled">On-Boot</th>
+                            <th class="status">Status</th>
+                            <th class="port">Port</th>
+                            <th class="players">Players</th>
+                            <th class="memory">Memory</th>
+                            <th class="cpu">CPU</th>
                             <th class="age" title="Data Last Updated"><i class="fas fa-clock"></i></th>
-                            <th>Actions</th>
+                            <th class="actions">Actions</th>
                         </tr>
                         </thead>
                         <tbody>
