--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -17,6 +17,11 @@
             <li><a href="/settings" class="nav-link" data-page="settings">
                 <i class="fas fa-cog"></i> Settings
             </a></li>
+            <li>
+                <a href="https://ko-fi.com/bitsandbytes" class="nav-link" target="_blank" rel="noopener">
+                    <i class="fas fa-star"></i> Donate
+                </a>
+            </li>
         </ul>
     </div>
 </nav>
