--- a/views/firewall.ejs
+++ b/views/firewall.ejs
@@ -62,6 +62,20 @@
                     </tbody>
                 </table>
             </div>
+
+            <br/><br/>
+
+            <h3>Game Ports</h3>
+            <div id="portsContainer">
+                <table class="table ports-table">
+                    <thead>
+                    <tr><th>Game</th><th>Port</th><th>Protocol</th><th>Service</th><th>Comment</th><th>Actions</th></tr>
+                    </thead>
+                    <tbody id="portsTableBody">
+                    <tr><td colspan="6">Loading...</td></tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </main>
 </div>
