--- a/views/application_configure.ejs
+++ b/views/application_configure.ejs
@@ -22,10 +22,8 @@
                         Game Configuration
                     </h2>
                     <p>
-                        Manage all configuration options for <span class="app-name-placeholder">APPLICATION NAME</span>
+                        Manage application state for <span class="app-name-placeholder">APPLICATION NAME</span>
                         on <span class="host-name-placeholder">HOSTNAME OR IP</span>
-                        <br/><br/>
-                        Changes are applied immediately upon modification.
                     </p>
                 </div>
             </div>
@@ -69,33 +67,20 @@
 
                 <br/><br/>
 
-                <h3>Game Configuration</h3>
-                <div class="info-message" style="flex-wrap:wrap;">
-                    <p style="flex:1 100%;">
-                        Below are all configurable options for this game.
-                        These settings are generally shared to all services within the game.
+                <h3>Reinstall Application</h3>
+                <div class="info-message">
+                    <p>
+                        If you run into issues with this application or there are configuration updates available from the maintainer,
+                        you can reinstall this game without affecting your game data.
+                        <br/><br/>
+                        You will need to stop the game before performing a reinstall however.
                     </p>
-
-                    <div class="form-group" style="flex:1 100%;">
-                        <input type="search" placeholder="Quick Filter" id="quick-search" disabled="disabled"/>
-                    </div>
                 </div>
-                <hr/>
-                <br/>
-                <div id="configurationContainer" style="margin-bottom: 2rem;">
-                    <div class="form-group">
-                        <label class="form-label">Loading</label><p class="help-text">Please wait while options are loaded</p><input type="text" disabled="disabled"/>
-                    </div>
-                    <div class="form-group">
-                        <label class="form-label">Loading</label><p class="help-text">Please wait while options are loaded</p><input type="text" disabled="disabled"/>
-                    </div>
-                    <div class="form-group">
-                        <label class="form-label">Loading</label><p class="help-text">Please wait while options are loaded</p><input type="text" disabled="disabled"/>
-                    </div>
-                    <div class="form-group">
-                        <label class="form-label">Loading</label><p class="help-text">Please wait while options are loaded</p><input type="text" disabled="disabled"/>
-                    </div>
-                    <!-- Configuration interface will be inserted here -->
+                <div>
+                    <button id="reinstallBtn" class="link-control action-create disabled" title="Reinstall/Repair Game">
+                        <i class="fas fa-undo"></i>
+                        Reinstall Game
+                    </button>
                 </div>
             </div>
         </main>
