--- a/views/service_configure.ejs
+++ b/views/service_configure.ejs
@@ -32,10 +32,10 @@
             </div>
             
             <div class="content-body">
+                <h3>Quick Search</h3>
                 <div class="info-message" style="flex-wrap:wrap;">
                     <p style="flex:1 100%;">
-                        Below are all configurable options for this game instance.
-                        These settings only apply to this specific map/instance.
+                        Filter to quickly find an option by its name.
                     </p>
 
                     <div class="form-group" style="flex:1 100%;">
@@ -45,6 +45,14 @@
                 <hr/>
                 <br/>
 
+                <h3>Options</h3>
+                <div class="info-message">
+                    <p>
+                        Below are all configurable options for this game instance and application.<br/>
+                        Settings with a "<i class="fas fa-globe"></i>" icon indicate that the option is shared
+                        with all instances/maps of this game on this server, otherwise the option is unique to this instance/map.
+                    </p>
+                </div>
                 <div id="configurationContainer" style="margin-bottom: 2rem;">
                     <div class="form-group">
                         <label class="form-label">Loading</label><p class="help-text">Please wait while options are loaded</p><input type="text" disabled="disabled"/>
