Allow viewing of game options even with it running.

--- a/views/service_configure.ejs
+++ b/views/service_configure.ejs
@@ -46,13 +46,22 @@
                 <br/>
 
                 <h3>Options</h3>
-                <div class="info-message">
+                <div class="info-message" id="optionsMessageNormal">
                     <p>
                         Below are all configurable options for this game instance and application.<br/>
                         Settings with a "<i class="fas fa-globe"></i>" icon indicate that the option is shared
                         with all instances/maps of this game on this server, otherwise the option is unique to this instance/map.
                     </p>
                 </div>
+
+                <div class="warning-message" id="optionsMessageActive" style="display:none;">
+                    <p>
+                        <strong>EDITING IS DISABLED WHILE GAME IS ACTIVE</strong><br/><br/>
+                        Below are all options for this game instance and application.<br/>
+                        Your game is currently <strong>active</strong> so these are read-only.
+                    </p>
+                </div>
+
                 <div id="configurationContainer" style="margin-bottom: 2rem;">
                     <div class="form-group">
                         <label class="form-label">Loading</label><p class="help-text">Please wait while options are loaded</p><input type="text" disabled="disabled"/>
