Fix #19 Firewall page now handles if the firewall is not available and disables buttons appropriately.

--- a/views/firewall.ejs
+++ b/views/firewall.ejs
@@ -46,7 +46,15 @@
                 The firewall is inactive.
             </div>
             <div id="firewallStatusNotInstalled" class="error-message" style="display: none;">
-                UFW is not installed on this server.
+                <p>
+                    UFW is not installed on this server.
+
+                    <button id="installFirewallBtn">
+                        <i class="fas fa-download"></i>
+                        Install Firewall
+                    </button>
+                </p>
+
             </div>
 
             <br/><br/>
